[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/PlayerPanel.gd" type="Script" id=1]
[ext_resource path="res://ui/buttons/hidebar_top.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/Widget.gd" type="Script" id=3]
[ext_resource path="res://ui/buttons/hidebar_bottom.png" type="Texture" id=4]
[ext_resource path="res://ui/avatars/blank_man.jpg" type="Texture" id=5]
[ext_resource path="res://scripts/ui/MediumElement.gd" type="Script" id=6]
[ext_resource path="res://scripts/ui/SmallElement.gd" type="Script" id=7]
[ext_resource path="res://ui/flags/russia.jpg" type="Texture" id=8]
[ext_resource path="res://scripts/ui/HelpElement.gd" type="Script" id=9]

[node name="PlayerPanel" type="PanelContainer" groups=[
"player_panel",
]]
margin_right = 230.0
margin_bottom = 422.0
rect_min_size = Vector2( 230, 0 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 415.0
custom_constants/separation = 15
alignment = 1

[node name="Offset" type="ReferenceRect" parent="VBox"]
visible = false
margin_top = 16.0
margin_right = 216.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 28 )

[node name="HideButton" type="TextureButton" parent="VBox"]
margin_top = 7.0
margin_right = 216.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 32 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="ShowButton" type="TextureButton" parent="VBox"]
visible = false
margin_top = 47.0
margin_right = 216.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 32 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
unnamed = true

[node name="AvatarImage" type="TextureRect" parent="VBox"]
margin_top = 54.0
margin_right = 216.0
margin_bottom = 204.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="NameLabel" type="Label" parent="VBox"]
margin_top = 219.0
margin_right = 216.0
margin_bottom = 233.0
text = "Chaosus"
align = 1
script = ExtResource( 6 )

[node name="RankBox" type="HBoxContainer" parent="VBox"]
margin_top = 248.0
margin_right = 216.0
margin_bottom = 262.0
custom_constants/separation = 0

[node name="Offset" type="ReferenceRect" parent="VBox/RankBox"]
margin_right = 15.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )

[node name="RankLabel" type="Label" parent="VBox/RankBox"]
margin_left = 15.0
margin_right = 95.0
margin_bottom = 14.0
text = "LABEL_RANK"
align = 3
script = ExtResource( 7 )

[node name="Offset2" type="ReferenceRect" parent="VBox/RankBox"]
margin_left = 95.0
margin_right = 159.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBox/RankBox"]
margin_left = 159.0
margin_right = 201.0
margin_bottom = 14.0
text = "1-DAN"
script = ExtResource( 7 )

[node name="Offset3" type="ReferenceRect" parent="VBox/RankBox"]
margin_left = 201.0
margin_right = 216.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )

[node name="RatingBox" type="HBoxContainer" parent="VBox"]
margin_top = 277.0
margin_right = 216.0
margin_bottom = 291.0
custom_constants/separation = 0

[node name="Offset" type="ReferenceRect" parent="VBox/RatingBox"]
margin_right = 15.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )

[node name="RatingPoints" type="Label" parent="VBox/RatingBox"]
margin_left = 15.0
margin_right = 108.0
margin_bottom = 14.0
text = "LABEL_POINTS"
align = 1
script = ExtResource( 7 )

[node name="Offset2" type="ReferenceRect" parent="VBox/RatingBox"]
margin_left = 108.0
margin_right = 193.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/RatingBox"]
margin_left = 193.0
margin_right = 201.0
margin_bottom = 14.0
text = "0"
script = ExtResource( 7 )

[node name="Offset3" type="ReferenceRect" parent="VBox/RatingBox"]
margin_left = 201.0
margin_right = 216.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )

[node name="CountryBox" type="HBoxContainer" parent="VBox"]
margin_top = 306.0
margin_right = 216.0
margin_bottom = 338.0
custom_constants/separation = 0
alignment = 1

[node name="Offset" type="ReferenceRect" parent="VBox/CountryBox"]
margin_right = 15.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 0 )

[node name="Country" type="Label" parent="VBox/CountryBox"]
margin_left = 15.0
margin_top = 9.0
margin_right = 121.0
margin_bottom = 23.0
text = "LABEL_COUNTRY"
script = ExtResource( 7 )

[node name="Offset2" type="ReferenceRect" parent="VBox/CountryBox"]
margin_left = 121.0
margin_right = 153.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 0 )
size_flags_horizontal = 3

[node name="CountryIcon" type="TextureButton" parent="VBox/CountryBox"]
margin_left = 153.0
margin_right = 201.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 32 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 6
script = ExtResource( 9 )
tooltip_enabled = true
tooltip = "CY_UNKNOWN"

[node name="Offset3" type="ReferenceRect" parent="VBox/CountryBox"]
margin_left = 201.0
margin_right = 216.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 0 )

[node name="TimerBox" type="HBoxContainer" parent="VBox"]
margin_top = 353.0
margin_right = 216.0
margin_bottom = 385.0

[node name="Offset" type="ReferenceRect" parent="VBox/TimerBox"]
margin_right = 86.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 32 )
size_flags_horizontal = 3

[node name="TimerLabel" type="Label" parent="VBox/TimerBox"]
margin_left = 90.0
margin_top = 9.0
margin_right = 126.0
margin_bottom = 23.0
text = "00:00"

[node name="Offset2" type="ReferenceRect" parent="VBox/TimerBox"]
margin_left = 130.0
margin_right = 216.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 32 )
size_flags_horizontal = 3

[node name="Offset2" type="ReferenceRect" parent="VBox"]
margin_top = 400.0
margin_right = 216.0
margin_bottom = 400.0
[connection signal="pressed" from="VBox/HideButton" to="." method="_on_HideButton_pressed"]
[connection signal="pressed" from="VBox/ShowButton" to="." method="_on_ShowButton_pressed"]
